--- a/public_html/newcss.css
+++ b/public_html/newcss.css
@@ -37,8 +37,8 @@ body{
  display: inline;
 }
 #header>#more{
-    color: white;
-   
+    color: orangered;
+   background-color: white;
         border: orangered solid 5px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -99,9 +99,68 @@ body{
     display: inline;
     position: relative;
      padding: 0px 10px;
+     color: white;
+     font-size: 24px;
 }
-
+#img1>#note{
+    font-style: italic;
+   color: white;
+     font-size: 24px; 
+   position: relative;
+   left: 590px;
+   top: 30px;
+   
+}
+#img1>#note2{
+    font-style: italic;
+   color: white;
+     font-size: 24px; 
+   position: relative;
+   left: 260px;
+   top: 35px;
+   
+}
 #his{
     color: white;
     margin-left: 400px;
+}
+
+#sponcers{
+    color: white;
+    font-size: 32px;
+    
+     background: linear-gradient(orangered, black 25%);
+    border:white solid 5px;
+      border-top-left-radius: 20px;
+    border-top-right-radius: 50px;
+    margin-right: 950px;
+    position: relative;
+    left: 950px;
+    top: -500px;
+}
+#sponcers2{
+    color: white;
+    font-size: 32px;
+    
+     background: linear-gradient(orangered, black 25%);
+    border:white solid 5px;
+      border-top-left-radius: 20px;
+    border-top-right-radius: 50px;
+    margin-right: 950px;
+    position: relative;
+    left: 950px;
+    top: -3250px;
+}
+#event{
+    color: white;
+  
+}
+#event>h1{
+    color: white;
+    background: linear-gradient(orangered, black 35%);
+    border:white solid 5px;
+      border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-right: 950px;
+    
 }
