--- a/public_html/newcss.css
+++ b/public_html/newcss.css
@@ -35,7 +35,7 @@ body{
  display: inline;
 }
 #header>#more{
-    color: orangered;
+    
    background-color: white;
         border: orangered solid 5px;
     border-top-left-radius: 10px;
@@ -45,6 +45,7 @@ body{
        top: 20px;
        right: 20px;
        font-style: italic;
+       font-size: 24px;
 }
 #menu{
     margin-right: 413px;
